--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "prettier:format": "prettier --write \"tests/**/*.{ts,tsx,js,jsx,json,css,md}\"",
     "prettier:check": "prettier --check \"tests/**/*.{ts,tsx,js,jsx,json,css,md}\"",
     "lint": "eslint tests",
-    "test": "npx playwright test"
+    "test": "npx playwright test",
+    "dev": "tsx src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +23,7 @@
     "http-status-codes": "^2.3.0",
     "prettier": "^3.3.3",
     "prettier-plugin-organize-imports": "^4.1.0",
+    "tsx": "^4.19.2",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.8.1"
   },
