--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.12.0",
+    "@faker-js/faker": "^9.4.0",
     "@playwright/test": "^1.48.0",
     "@types/express": "^5.0.0",
     "@types/node": "^22.7.5",
     "eslint": "^9.12.0",
+    "express": "^4.21.2",
     "globals": "^15.11.0",
     "http-status-codes": "^2.3.0",
     "prettier": "^3.3.3",
@@ -26,9 +28,5 @@
     "tsx": "^4.19.2",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.8.1"
-  },
-  "dependencies": {
-    "@faker-js/faker": "^9.4.0",
-    "express": "^4.21.2"
   }
 }
