--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -53,12 +53,12 @@ jobs:
           compose-file: ./docker-compose.yaml
           up-flags: -d
 
-      - name: Run local API tests
+      - name: Run test for empty array scenario
         run: |
           echo "Running local API tests..."
-          npx playwright test tests/User.Api.spec.ts --workers=1
+          npx playwright test tests/GetAllUsers.spec.ts
 
-      - name: Run rest API tests
+      - name: Run remaining tests
         run: |
           echo "Running rest API tests..."
-          npx playwright test tests/GetOrder.spec.ts tests/PostOrder.spec.ts tests/simple-solution-api.spec.ts
+          npx playwright test tests/GetOrder.spec.ts tests/Login.spec.ts tests/PostOrder.spec.ts tests/simple-solution-api.spec.ts
