--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -61,4 +61,4 @@ jobs:
       - name: Run remaining tests
         run: |
           echo "Running rest API tests..."
-          npx playwright test tests/GetOrder.spec.ts tests/Login.spec.ts tests/PostOrder.spec.ts tests/simple-solution-api.spec.ts
+          npx playwright test tests/User.Api.spec.ts
