--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -53,4 +53,4 @@ jobs:
       - name: Run remaining tests
         run: |
           echo "Running rest API tests..."
-          npx playwright test tests/User.Api.spec.ts
+          npx playwright test tests/User.Api.spec.ts test tests/GetOrder.spec.ts test tests/Login.spec.ts test tests/Post-order.spec.ts test tests/TestWithApi.spec.ts test tests/PostApiLoanCalcDecision.spec.ts
