--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -51,6 +51,9 @@ jobs:
           npx playwright test tests/EmptyArray.spec.ts
 
       - name: Run remaining tests
+        env:
+          USERNAME: ${{ secrets.USERNAME }}
+          PASSWORD: ${{ secrets.PASSWORD }}
         run: |
           echo "Running rest API tests..."
           npx playwright test tests/User.Api.spec.ts test tests/GetOrder.spec.ts test tests/Login.spec.ts test tests/Post-order.spec.ts test tests/TestWithApi.spec.ts test tests/PostApiLoanCalcDecision.spec.ts
