--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -26,13 +26,13 @@ jobs:
 
       - name: Run Prettier check
         run: |
-            echo "Running Prettier to check for formatting issues..."
-            npm run prettier:check
+          echo "Running Prettier to check for formatting issues..."
+          npm run prettier:check
 
       - name: Run ESLint check
         run: |
-            echo "Running ESLint to check for linting issues..."
-            npm run lint 
+          echo "Running ESLint to check for linting issues..."
+          npm run lint 
 
       - name: Run TypeScript compile check
         run: |
@@ -45,7 +45,15 @@ jobs:
           compose-file: ./docker-compose.yaml
           up-flags: -d
 
-      - name: Run Playwright tests
+      - name: Run test for empty array scenario
         run: |
           echo "Running local API tests..."
-          npx playwright test tests/ApiLoop.spec.ts
+          npx playwright test tests/EmptyArray.spec.ts
+
+      - name: Run remaining tests
+        env:
+          USERNAME: ${{ secrets.USERNAME }}
+          PASSWORD: ${{ secrets.PASSWORD }}
+        run: |
+          echo "Running rest API tests..."
+          npx playwright test tests/User.Api.spec.ts test tests/GetOrder.spec.ts test tests/Login.spec.ts test tests/Post-order.spec.ts test tests/TestWithApi.spec.ts test tests/PostApiLoanCalcDecision.spec.ts
